# Cortex1-ZeroVeil

./: .gitignore  CLA.md  CONTRIBUTING.md  COPYRIGHT  LICENSE  NOTICE  NOTICE.md  README.md  SECURITY.md  TODO.md  TRADEMARK.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  cla.yml  dco.yml
docs/: architecture.md  compliance.md  editions.md  migration-cortex1-tier-escalation.md  mixer-design.md  spec-v0.md  threat-model.md  whitepaper.md
policies/: default.json
scripts/: check_dco_signoff.py  demo_gateway.py
src/zeroveil_gateway/: __main__.py  app.py  audit.py  pii.py  policy.py  schemas.py  tenants.py
src/zeroveil_gateway/providers/: __init__.py  base.py  openrouter.py
tenants/: default.json
tests/: conftest.py  test_gateway_v0.py  test_request_validation.py
tests/e2e/: test_gateway_e2e.py
tests/fixtures/requests/: invalid_missing_scrub_attestation.json  invalid_missing_zdr_only.json  valid_minimal.json
tests/integration/: test_gateway_contract.py  test_tenant_auth.py
tests/regression/: test_no_content_logging.py
tests/unit/: test_audit.py  test_pii.py  test_policy.py  test_providers.py  test_tenants.py
