[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex1-zeroveil-gateway"
version = "0.0.0"
description = "ZeroVeil community gateway (FastAPI) - policy-enforced ZDR relay stub."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "requests>=2.31",
  "uvicorn>=0.30",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
