[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cortex1-zeroveil-community"
version = "0.1.0a1"
description = "DLP Controls for Any LLM API - for developers building regulated apps and enterprise IT teams. PII rejection, audit logging, and provider-side correlation resistance."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "requests>=2.31",
  "uvicorn>=0.30",
  "pydantic>=2.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
